--- a/setup.cfg
+++ b/setup.cfg
@@ -4,6 +4,7 @@ author = See AUTHORS
 author-email = maarten@adimian.com
 summary = Adapter for requests session to access flask apps
 description-file = README.md
+long-description-content-type = text/markdown
 home-page = https://github.com/maarten-dp/requests-flask-adapter
 license = MIT/Expat
 classifier =
